--- a/LibraryAccountingApp.PL.WebApp/Pages/_ViewImports.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @using LibraryAccountingApp
-@namespace LibraryAccountingApp.Pages
+@namespace LibraryAccountingApp.PL.WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
