--- a/LibraryAccountingApp.PL.WebApp/Pages/Shared/_Layout.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
+
                 </div>
+                <partial name="_LoginPartial" />
             </div>
         </nav>
     </header>
