Added Books and Genres pages. Set up redirection from Index page.

--- a/LibraryAccountingApp.PL.WebApp/Pages/Index.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Pages/Index.cshtml
@@ -9,12 +9,10 @@
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-@if (SignInManager.IsSignedIn(User))
+@*@if (SignInManager.IsSignedIn(User))*@
+@if (true)
 {
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    </div>
+    Response.Redirect("/Books");
 }
 else
 {
