--- a/LibraryAccountingApp.PL.WebApp/Pages/Shared/_Layout.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Pages/Shared/_Layout.cshtml
@@ -43,9 +43,9 @@
     </header>
     <div class="container">
         <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
+        @*<main role="main" class="pb-3">*@
             @RenderBody()
-        </main>
+        @*</main>*@
     </div>
 
     <footer class="border-top footer text-muted">
