--- a/LibraryAccountingApp.PL.WebApp/Views/Home/Error.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Views/Home/Error.cshtml
@@ -1,8 +1,5 @@
-﻿@page
-@model ErrorModel
-@{
-    ViewData["Title"] = "Error";
-}
+﻿@using LibraryAccountingApp.PL.WebApp.Models;
+@model ErrorViewModel
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
