--- a/LibraryAccountingApp.PL.WebApp/Views/Home/Index.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="col-9">
         <div class="d-flex flex-row justify-content-between align-items-center">
             <h4 class="">Books</h4>
-            <a class="btn btn-primary mb-2 text-white">
+            <a class="btn btn-primary mb-2 text-white" asp-action="AddBook">
                 Add new book
             </a>
         </div>
