--- a/LibraryAccountingApp.PL.WebApp/Views/Home/Index.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Views/Home/Index.cshtml
@@ -21,5 +21,27 @@
             </a>
         </div>
         <partial name="_BooksTable" model="@ViewBag.Books"/>
+        <nav>
+            <ul class="pagination justify-content-start">
+                @if (ViewBag.Page > 1)
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-action="Index" asp-route-pageNumber="@(ViewBag.Page-1)">Previous</a>
+                    </li>
+                }
+                @for (int i = 1; i <= ViewBag.PagesCount; i++)
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-action="Index" asp-route-pageNumber="@i">@i</a>
+                    </li>
+                }
+                @if (ViewBag.Page != ViewBag.PagesCount)
+                {
+                    <li class="page-item">
+                        <a class="page-link"  asp-action="Index" asp-route-pageNumber="@(ViewBag.Page+1)">Next</a>
+                    </li>
+                }
+            </ul>
+        </nav>
     </div>
 </div>
