Completed Genre-related pages.

--- a/LibraryAccountingApp.PL.WebApp/Views/Home/Index.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     <div class="col-3">
         <div class="d-flex flex-row justify-content-between align-items-center">
             <h4 class="">Genres</h4>
-            <a class="btn btn-primary mb-2 text-white">
+            <a class="btn btn-primary mb-2 text-white" asp-action="AddGenre">
                 Add new genre
             </a>
         </div>
