--- a/LibraryAccountingApp.PL.WebApp/Views/Home/Genre.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Views/Home/Genre.cshtml
@@ -10,10 +10,12 @@
             <div class="d-flex flex-row justify-content-between align-items-center">
                 <h4 class="">Genre</h4>
                 <div>
-                    <a class="btn btn-info mb-2 text-white">
+                    <a class="btn btn-info mb-2 text-white"
+                       asp-action="EditGenre" asp-route-id="@Model.Id">
                         Edit
                     </a>
-                    <a class="btn btn-danger mb-2 text-white">
+                    <a class="btn btn-danger mb-2 text-white"
+                       asp-action="DeleteGenre" asp-route-id="@Model.Id">
                         Delete
                     </a>
                 </div>
