--- a/LibraryAccountingApp.PL.WebApp/Views/Home/Book.cshtml
+++ b/LibraryAccountingApp.PL.WebApp/Views/Home/Book.cshtml
@@ -1,6 +1,10 @@
 ﻿@using LibraryAccountingApp.PL.WebApp.Models;
 @model BookViewModel
-    
+
+@using Microsoft.AspNetCore.Identity
+@using LibraryAccountingApp.Entities
+@inject UserManager<User> UserManager
+
 <div class="row">
     <div class="col-3 d-flex justify-content-end align-items-start">
         <a class="btn btn-primary mb-2 text-white" asp-area="" asp-controller="Home" asp-action="Index">
@@ -11,12 +15,15 @@
         <div class="d-flex flex-row justify-content-between align-items-center">
             <h4 class="">Book</h4>
             <div>
-                <a class="btn btn-info mb-2 text-white" asp-action="EditBook" asp-route-id="@Model.Id">
-                    Edit
-                </a>
-                <a class="btn btn-danger mb-2 text-white" asp-action="DeleteBook" asp-route-id="@Model.Id">
-                    Delete
-                </a>
+                @if (User.IsInRole("Administrator"))
+                {
+                    <a class="btn btn-info mb-2 text-white" asp-action="EditBook" asp-route-id="@Model.Id">
+                        Edit
+                    </a>
+                    <a class="btn btn-danger mb-2 text-white" asp-action="DeleteBook" asp-route-id="@Model.Id">
+                        Delete
+                    </a>
+                }
             </div>
         </div>
         <div>
@@ -30,7 +37,7 @@
                         <td><b>Genre</b></td>
                         <td>
                             <a asp-area="" asp-controller="Home" asp-action="OpenGenre" asp-route-id="@Model.Genre.Id">
-                            @Model.Genre.Name
+                                @Model.Genre.Name
                             </a>
                         </td>
                     </tr>
